--- a/rtools/Cargo.toml
+++ b/rtools/Cargo.toml
@@ -1,12 +1,8 @@
 [package]
-name = "httpserver"
+name = "rtools"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-http = {path = "../http"}
-rtools = {path = "../rtools"}
-serde = {version = "1.0.131", features = ["derive"]}
-serde_json = "1.0.72"
